--- a/src/app/hobbies/components/own-hobbies/own-hobbies.component.html
+++ b/src/app/hobbies/components/own-hobbies/own-hobbies.component.html
@@ -2,7 +2,7 @@
     <h2>{{ "own_hobbies" | translate }}</h2>
     <div class="hobby-tile-container">
       <div class="hobby-tile" *ngFor="let hobby of hobbyList">
-        <app-hobby-tile [hobby]="hobby"></app-hobby-tile>
+        <app-hobby-tile [hobby]="hobby" (addToOwnHobbiesEmitter)="addToOwnHobby($event)"></app-hobby-tile>
       </div>
     </div>
   </div>
