hobby detail works now

--- a/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.html
+++ b/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.html
@@ -20,7 +20,7 @@
             <span>{{ "hobby_notes_label" | translate }}</span>
             <mat-form-field>
                 <textarea  matInput id="hobbyNotes" class="form-control" rows="5" cols="50"
-                    [(ngModel)]="activity.activityNotes" name="hobbyNotes" #hobbyNotes="ngModel"></textarea>
+                    [(ngModel)]="activity.notes" name="hobbyNotes" #hobbyNotes="ngModel"></textarea>
             </mat-form-field>
         </div>
 
