--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,2 +1,5 @@
 TODO: 
-collectionbe úgy menteni a dokumentumot hogy vele együtt az id-t is <br>
+collectionbe úgy menteni a dokumentumot hogy vele együtt az id-t is regisztráció?<br>
+no error message when own_hobbies/fake id <br>
+errorlog fix: errorlog és failedmessage<br>
+add new hobby html + függvény megfixálás<br>
