errorlog change, apróbb javítások

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,5 +1,5 @@
 TODO: 
-collectionbe úgy menteni a dokumentumot hogy vele együtt az id-t is regisztráció?<br>
 no error message when own_hobbies/fake id <br>
 errorlog fix: errorlog és failedmessage<br>
 add new hobby html + függvény megfixálás<br>
+login/register ha error van akkor nem jó<br>
