Fix login/register error and save user information

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -3,3 +3,4 @@ no error message when own_hobbies/fake id <br>
 errorlog fix: errorlog és failedmessage<br>
 add new hobby html + függvény megfixálás<br>
 login/register ha error van akkor nem jó<br>
+regisztrált felhasználónál az uid nem ugyanaz mint a sima id 
