--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -3,4 +3,18 @@ no error message when own_hobbies/fake id <br>
 errorlog fix: errorlog és failedmessage<br>
 add new hobby html + függvény megfixálás<br>
 login/register ha error van akkor nem jó<br>
-regisztrált felhasználónál az uid nem ugyanaz mint a sima id 
+
+
+<div style="margin: 20px;">
+összegző oldal: <br>
+kész funkciók: <br>
+- login <br>
+- register <br>
+- logout <br>
+- elfelejtett jelszó (email újraküldés) <br>
+- hobby lista <br>
+- hobby részletek   <br>
+- hobby rögzítés (új activity)  <br>
+- új saját hobbi rögzítése (in progress) <br>
+- tevékenységnapló diagramokkal (in progress) <br>
+</div>
