--- a/src/app/hobbies/components/activity-wrap/activity-wrap.component.html
+++ b/src/app/hobbies/components/activity-wrap/activity-wrap.component.html
@@ -1,4 +1,21 @@
 <div>
     <h2> {{ "activity_wrap" | translate }}</h2>
     todo: diagramok jönnek ide...
+    <div *ngIf="data && data.length > 4">
+     
+    <ngx-charts-advanced-pie-chart 
+        [view]="view"
+        [results]="data"
+        [gradient]="gradient"
+        [customColors]="customColors"
+        >
+    </ngx-charts-advanced-pie-chart>
+    </div>
 </div>
+{{ data | json }}
+
+<!--<ngx-charts-bar-vertical
+            [view]="view"
+            [results]="data"
+            >
+    </ngx-charts-bar-vertical>-->
