--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -3,6 +3,11 @@ no error message when own_hobbies/fake id <br>
 errorlog fix: errorlog és failedmessage<br>
 add new hobby html + függvény megfixálás<br>
 login/register ha error van akkor nem jó<br>
+tevékenységnapló: diagramok<br>
+normális kezdőlap<br>
+hobby részletek oldal fixálása<br>
+egységes színpaletta használata<br>
+hobby tileban a kép alatt van egy vékony csík <br>
 
 
 <div style="margin: 20px;">
