--- a/src/app/hobbies/components/activity-tile/activity-tile.component.html
+++ b/src/app/hobbies/components/activity-tile/activity-tile.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="activity" class="activity-tile">
     <p>{{'spent_hours' | translate}}: {{activity.spentHours}}</p>
+    <p>{{'date' | translate}}: {{activity.date | dateTime}}</p>
     <p>{{'notes' | translate }}: {{activity.notes}}</p>
 </div>
