--- a/src/app/hobbies/components/hobby-detail/hobby-detail.component.scss
+++ b/src/app/hobbies/components/hobby-detail/hobby-detail.component.scss
@@ -7,8 +7,12 @@
 }
 
 img{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
     border-radius: 5px;
-    max-width: 300px;
+    max-height: 200px;
+    margin: auto;
+    display: block;
+}
+.center{
+  text-align: center;
 }
