--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,11 +1,9 @@
 TODO: 
 no error message when own_hobbies/fake id <br>
-errorlog fix: errorlog és failedmessage<br>
 add new hobby html + függvény megfixálás<br>
 login/register ha error van akkor nem jó<br>
 tevékenységnapló: diagramok<br>
 normális kezdőlap<br>
-hobby részletek oldal fixálása<br>
 egységes színpaletta használata<br>
 hobby tileban a kép alatt van egy vékony csík <br>
 
@@ -18,8 +16,17 @@ kész funkciók: <br>
 - logout <br>
 - elfelejtett jelszó (email újraküldés) <br>
 - hobby lista <br>
+- saját hobbik lista <br>
 - hobby részletek   <br>
 - hobby rögzítés (új activity)  <br>
-- új saját hobbi rögzítése (in progress) <br>
-- tevékenységnapló diagramokkal (in progress) <br>
+- új saját hobbi rögzítése<br>
+- tevékenységnapló diagramokkal<br>
+- profil oldal<br>
+- nyelvváltoztatás<br>
+
+TODO: <br>
+- szerkesztés: profil, activity, saját hobby<br>
+- törlés: activity, saját hobby<br>
+- új nyelv: német<br>
+- hobby kibövítése:  hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby level: beginner, intermediate, advanced, professional<br><br>
 </div>
