--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,3 +88,11 @@ html, body {
   margin-right: 5px;
   color:black;
 }
+
+.outside_div{
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid rgb(116, 70, 105);
+  border-radius: 5px;
+  background-color: #f0c3f0;
+}
