--- a/src/app/hobbies/components/activity-wrap/activity-wrap.component.html
+++ b/src/app/hobbies/components/activity-wrap/activity-wrap.component.html
@@ -6,6 +6,7 @@
         <button class="btn btn-info" (click)="buttonChange('allVertical')">{{ "show_all_vertical" | translate }}</button>
         <button class="btn btn-info" (click)="buttonChange('monthlyPie')">{{ "show_monthly_pie" | translate }}</button>
         <button class="btn btn-info" (click)="buttonChange('monthlyVertical')">{{ "show_monthly_vertical" | translate }}</button>
+        <button class="btn btn-info" (click)="buttonChange('groupedVerticalBarChart')">{{ "show_grouped_vertical" | translate }}</button>
     </div>
 
     <div *ngIf="buttons['allPie']">
@@ -63,5 +64,21 @@
 			[yAxisLabel]="'spent_hours' | translate"
         >
 		</ngx-charts-bar-vertical>
+    </div>
+
+    <div *ngIf="buttons['groupedVerticalBarChart']">
+        <ngx-charts-bar-vertical-2d
+            [view]="view"
+            [results]="groupedVerticalBarChart"
+            [gradient]="false"
+            [xAxis]="true"
+            [yAxis]="true"
+            [legend]="true"
+            [showXAxisLabel]="true"
+            [showYAxisLabel]="true"
+            [xAxisLabel]="'months' | translate"
+            [yAxisLabel]="'spent_hours' | translate"
+        >
+        </ngx-charts-bar-vertical-2d>
     </div>
 </div>
