color correction, changed font-family

--- a/src/app/hobbies/components/activity-tile/activity-tile.component.scss
+++ b/src/app/hobbies/components/activity-tile/activity-tile.component.scss
@@ -1,7 +1,7 @@
 .activity-tile{
     border-radius: 5px;
-    border: 1px solid rgb(116, 70, 105);
-    background-color: #ffd5ff;
+    border: 1px solid var(--dark-pink-color);
+    background-color: var(--lighter-pink-color);
     margin: 10px;
     padding: 10px;
 }
