--- a/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.scss
+++ b/src/app/hobbies/components/add-new-hobby/add-new-hobby.component.scss
@@ -1,9 +1,9 @@
 .inner_div {
-    border: 1px solid #ac3883;
+    border: 1px solid var(--dark-pink-color);
     border-radius: 5px;
     margin: 10px;
     padding: 10px;
-    background-color: #ffdaf9;
+    background-color: var(--mid-light-pink-color);
     max-width: 600px;
 }
 
