--- a/src/app/shared/components/profile/profile.component.html
+++ b/src/app/shared/components/profile/profile.component.html
@@ -16,7 +16,7 @@
       <div class="mb-3 row">
         <div class="data-div-item mb-3 row">
           <div class="data-div-item-title col-sm-3">
-            {{'email' | translate}}
+            {{'email' | translate}}:
           </div>
           <div class="data-div-item-data col-sm-9">
             {{user.email}}
@@ -24,7 +24,7 @@
         </div>
         <div class="data-div-item mb-3 row">
           <div class="data-div-item-title col-sm-3">
-            {{'username' | translate}}
+            {{'username' | translate}}:
           </div>
           <div class="data-div-item-data col-sm-9">
             {{user.username}}
