--- a/src/app/hobbies/components/activity-wrap/activity-wrap.component.scss
+++ b/src/app/hobbies/components/activity-wrap/activity-wrap.component.scss
@@ -1,14 +1,16 @@
 button{
-    background-color: #aedbf5;
-    border: 1px solid #000000;
+    background-color: var(--mid-light-pink-color);
+    border: 1px solid var(--dark-pink-color);
     border-radius: 5px;
     padding: 5px;
     margin: 10px;
     cursor: pointer;
     &:hover{
-        background-color: #3a934a;
+        background-color: var(--neon-pink-color);
+        border-color: var(--dark-pink-color);
     }
     &.active{
-        background-color: #eda2a2;
+        background-color: var(-peach-pink-color);
+        border-color: var(--dark-pink-color);
     }
 }
