--- a/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.scss
+++ b/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.scss
@@ -8,7 +8,7 @@
     height: 70vh;
     border: 1px solid black;
     padding: 10px;
-    background-color: rgb(224, 141, 227);
+    background-color: var(--light-pink-color);
     position: relative;
     margin: 0% !important;
 }
