--- a/src/app/publikus/components/footer/footer.component.scss
+++ b/src/app/publikus/components/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer{
-    background-color: rgb(163, 51, 115);
+    background-color: var(--neon-pink-color);
     text-align: center;
     padding: 10px;
     font-weight: bold;
