--- a/src/app/shared/components/profile/profile.component.scss
+++ b/src/app/shared/components/profile/profile.component.scss
@@ -31,7 +31,7 @@
 }
 
 .block{
-  background-color: rgb(255, 166, 234);
+  background-color: var(--light-pink-color);
   border-radius: 10px;
   padding: 10px;
   border: solid 1px black;
@@ -44,4 +44,8 @@ button{
   border-radius: 10px;
   border: solid 1px black;
   float: right;
+}
+
+h2{
+  text-align: center;
 }
