--- a/src/app/hobbies/components/hobby-detail/hobby-detail.component.html
+++ b/src/app/hobbies/components/hobby-detail/hobby-detail.component.html
@@ -1,11 +1,15 @@
 <div class="outside_div">
+    <button mat-icon-button class="icon-button" [matTooltip]="'record_hobby' | translate"
+          (click)="addToOwnHobbies()">
+        <mat-icon>add</mat-icon>
+    </button>
     <h1 *ngIf="hobby" class="center"> {{"hobby_detail" | translate }} - {{ hobby.name | bilingualTranslate}}</h1>
     <div *ngIf="hobby">
         <img [src]="hobby.imageUrl" alt="{{ hobby.name | bilingualTranslate}} image" class="tile-image" />
         <p class="center">{{'description' | translate}}: {{hobby.description | bilingualTranslate}}</p>
         <h3>{{'activity' | translate}}:</h3>
         <div *ngFor="let activity of hobby.activities">
-            <app-activity-tile [activity]="activity"></app-activity-tile>
+            <app-activity-tile [activity]="activity" (deleteEventEmitter)="deleteActivity($event)"></app-activity-tile>
         </div>
     </div>
 </div>
