--- a/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.scss
+++ b/src/app/hobbies/components/dialogs/record-hobby/record-hobby.component.scss
@@ -13,6 +13,15 @@
     margin: 0% !important;
 }
 
+@media only screen and (max-width: 600px) {
+    .dialog-div {
+        width: 100%;
+        height: auto;
+        padding: 3px;
+    }
+}
+
+
 span{
     font-size: 20px;
 }
