--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,11 +1,17 @@
 TODO: 
 no error message when own_hobbies/fake id <br>
 login/register ha error van akkor nem jó<br>
-tevékenységnapló: diagramok<br>
 normális kezdőlap<br>
-egységes színpaletta használata<br>
 hobby tileban a kép alatt van egy vékony csík <br>
-
+ownhobbies category hianyzik -> új letárolás <br>
+offline mód <br>
+<br>
+- szerkesztés: profil, activity, saját hobby<br>
+- törlés: saját hobby<br>
+- új nyelv: német<br>
+- Record hobby dialog telefonon nem jó<br>
+- hobby kibövítése:  hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby level: beginner, intermediate, advanced, professional<br><br>
+- profilnál a saját hobbinak csak az id-ját kéne letárolni<br>
 
 <div style="margin: 20px;">
 összegző oldal: <br>
@@ -22,10 +28,7 @@ kész funkciók: <br>
 - tevékenységnapló diagramokkal<br>
 - profil oldal<br>
 - nyelvváltoztatás<br>
+- kategorizált hobbik<br>
+- activity törlése<br>
 
-TODO: <br>
-- szerkesztés: profil, activity, saját hobby<br>
-- törlés: activity, saját hobby<br>
-- új nyelv: német<br>
-- hobby kibövítése:  hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby level: beginner, intermediate, advanced, professional<br><br>
 </div>
