error message when own_hobbies/fake id

--- a/src/app/publikus/components/home/home.component.html
+++ b/src/app/publikus/components/home/home.component.html
@@ -1,5 +1,4 @@
 TODO: 
-no error message when own_hobbies/fake id <br>
 login/register ha error van akkor nem jó<br>
 normális kezdőlap<br>
 hobby tileban a kép alatt van egy vékony csík <br>
@@ -12,6 +11,8 @@ offline mód <br>
 - Record hobby dialog telefonon nem jó<br>
 - hobby kibövítése:  hobby típus: indoor, outdoor; hobby kategória: sport, music, art, dance, travel, other;hobby level: beginner, intermediate, advanced, professional<br><br>
 - profilnál a saját hobbinak csak az id-ját kéne letárolni<br>
+- tesztelés <br>
+- profil oldal a goggle bejelentkezés alapján van és nem kéri le újra a profilt<br>
 
 <div style="margin: 20px;">
 összegző oldal: <br>
