--- a/src/app/hobbies/components/activity-wrap/activity-wrap.component.scss
+++ b/src/app/hobbies/components/activity-wrap/activity-wrap.component.scss
@@ -14,3 +14,16 @@ button{
         border-color: var(--dark-pink-color);
     }
 }
+.options{
+    margin: 10px;
+}
+
+.show_button{
+    background-color: var(--success-color);
+    border: 1px solid var(--dark-green-color);
+    &:hover{
+        background-color: var(--dark-green-color);
+        border-color: var(--dark-green-color);
+    }
+    margin: 10px;
+}
