--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,7 @@ html, body {
   --mid-light-pink-color: rgb(255,192,230);
   --light-yellow-color: rgb(254,255,163);
   --black-color: rgb(0, 0, 0);
+  --dark-green-color: rgb(0, 128, 0);
 
 }
 
